style: changed style for table-body for card; added z-index for correct visible

--- a/src/components/ui/dropdown/dropdown.module.scss
+++ b/src/components/ui/dropdown/dropdown.module.scss
@@ -28,7 +28,7 @@
 
 .content {
   position: absolute;
-  z-index: 0;
+  z-index: 2;
   right: -30px;
 
   width: max-content;
